<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/action_bar_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:paddingTop="@dimen/action_bar_padding"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"/>

    <Button
        android:layout_width="@dimen/bell_size"
        android:layout_height="@dimen/bell_size"
        android:layout_marginTop="@dimen/bell_margin"
        android:layout_marginRight="@dimen/bell_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/btn_notification"
        android:background="@drawable/ic_bell_off"/>

    <LinearLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="@id/action_bar_main"
        app:layout_constraintStart_toEndOf="@id/action_bar_main"
        app:layout_constraintTop_toBottomOf="@id/action_bar_main"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/category_title"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/category_priority"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/category_completion"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/category_deadline"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:layout_weight="2"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:dividerHeight="1dp"
        android:divider="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/category"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="@dimen/add_button"
        android:layout_height="@dimen/add_button"
        android:layout_marginRight="@dimen/add_button_margin"
        android:layout_marginBottom="@dimen/add_button_margin"
        android:background="@drawable/btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>